--- a/ye.html
+++ b/ye.html
@@ -15,6 +15,7 @@
             padding: 0;
             background-color: #ffdde6;
             color: #000120;
+            width: auto;
         }
         header 
         {
@@ -60,7 +61,7 @@
             text-align: center;
             padding: 1em 0;
             position: relative;
-            width: 100%;
+            width: auto;
             bottom: 0;
             text-decoration: underline
         }
